[tool.poetry]
name = "runningtrackerapi"
version = "0.1.0"
description = ""
authors = ["Luis Cruz <luisccc99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-restful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
